Modifiche parte Gena
migliorata la parte grafica della pagina di registrazione

--- a/BasePagWEB/index.html
+++ b/BasePagWEB/index.html
@@ -39,7 +39,11 @@
          <label for="ConfPass">Conferma password</label>
          <input type="password" placeholder="conferma la password" id="ConfPass" required>
        </div>
-       <span class="gender-title">Data di nascita</span>
+       <h3>Inserisci data di nascita</h3>
+       <div class="data-nascita">
+         <input type="date">
+       </div>
+      <!-- <span class="data-nascita">Data di nascita</span>
        <div class="eta">
          <select name="giorno">
            <option value="Giorno">Giorno</option>
@@ -53,9 +57,9 @@
            <option value="Anno">Anno</option>
            <option value="2000">2000</option>
          </select>
-       </div>
+       </div> -->
        <span class="gender-title">Sesso</span>
-       <div class="gender-choice">
+         <div class="gender-choice">
          <input type="radio" name="gender" id="maschio">
          <label for="maschio">Maschio</label>
          <input type="radio" name="gender" id="femmina">
